@@ -6,6 +6,7 @@ Version 3.2.1.1 (2008-xx-xx)
 	Fixed bug where input elements inside inlinepopups wasn't editable in Firefox 2.
 	Fixed bug where the xhtmlxtras plugin wasn't replacing attribute values correctly.
 	Fixed bug where menu buttons in skin variants would look strange due to IE 8 fixes.
+	Fixed bug where WebKit browsers would on backspace take you back to the previous page if the editor was empty.
 Version 3.2.1 (2008-11-04)
 	Added support for custom icon image for drop menus. Use icon_src to set a custom image directly.
 	Added new media_strict option to media plugin. Enables you to control if the flash embed is strict or not. Enabled by default.
